Fixed the choice overflow ellipsis bug

--- a/src/styles/overrides/_material-override.scss
+++ b/src/styles/overrides/_material-override.scss
@@ -174,6 +174,7 @@ html {
 	--mat-sys-surface-container-low: var(--background-color) !important;
 	--mat-sys-secondary-container: var(--primary-color) !important;
 	--mat-sys-surface-container-high: var(--background-color) !important;
+	--mat-sys-on-secondary-container: var(--text-color) !important;
 
 	--mdc-filled-text-field-input-text-color: var(--text-color);
 	--mdc-filled-text-field-label-text-color: color-mix(in oklch, var(--text-color), transparent 40%);
@@ -195,16 +196,26 @@ html {
 	--mat-sys-on-error-container: var(--error, #b00020);
 
 	.lp-dialog-panel .mat-mdc-dialog-container .mdc-dialog__surface {
-		/* tiramos paddings do container e deixamos o conteúdo controlar */
 		padding: 0;
 		border-radius: 12px;
 		background: var(--surface, color-mix(in oklab, var(--background-color) 96%, white));
 	}
 
-	/* opcional: borda sutil para integrar ao seu DS */
 	.lp-dialog-panel .mat-mdc-dialog-container .mdc-dialog__surface {
-		border: 1px solid var(--border-color, #3a3a3a);
+		border: 1px solid gray;
 		box-shadow: 0 8px 24px rgba(0, 0, 0, 0.28);
+	}
+
+	// NON COLOR OVERRIDES
+
+	.mdc-list-item__primary-text {
+		text-overflow: initial !important;
+		white-space: normal !important;
+	}
+
+	.mdc-list-item.mdc-list-item--with-one-line {
+		min-height: 48px !important;
+		height: auto !important;
 	}
 
 	// TODO: Verify if this is needed
